# word-search-generator

./: .gitignore  ACTUAL_HELP.txt  CHANGELOG.txt  README  README.md  algorithm.py  gui_common.py  pyinstaller_build.sh  pyproject.toml  qt_mainwindow.py  requirements.txt  tk_mainwindow.py  word_search.pyw  word_search_22.pyw  word_search_generator.py  word_search_generator.pyw
.github/workflows/: python-publish.yml
src/: wordsearchgen_wrap.py
src/wordsearchgen/: __init__.py  __main__.py  algorithm.py  gui_common.py  qt_mainwindow.py  tk_mainwindow.py
