[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "word-search-generator"
version = "2.12.0"
keywords = ["rumble", "api", "wrapper", "livestream"]
authors = [
  { name="Wilbur Jaywright", email="zargulthewizard@outlook.com" },
]
description = "Generate word search puzzles"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "numpy",
  "pyside6", # Weak dependency, only for the Qt GUI
  ]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 or later (LGPLv3+)",
    "Operating System :: OS Independent",
    "Development Status :: 4 - Beta",
]

[project.urls]
Homepage = "https://github.com/thelabcat/word-search-generator"
Issues = "https://github.com/thelabcat/word-search-generator/issues"

[project.gui-scripts]
wordsearchgen = "wordsearchgen.__main__:main"
